test/type/pass/null.j
class A { Void main(){return;} }
class B {
  A a;
  String a() {
    a = null;
    return null;
  }
}
