test/type/fail/non_existent_global_method_overload.j
class A{
  Void main() {
    return new B().a();
  }
}

class B{}
